--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "libphonenumber-js": "^1.9.13",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-hook-form": "^6.15.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "sweetalert2": "^10.15.6",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9"
   },
