--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hookform/resolvers": "^1.3.4",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
@@ -13,6 +14,7 @@
     "bootstrap": "^4.6.0",
     "libphonenumber-js": "^1.9.13",
     "node-sass": "^4.14.1",
+    "notistack": "^1.0.9",
     "prop-types": "^15.7.2",
     "query-string": "^6.13.8",
     "react": "^17.0.1",
@@ -21,6 +23,7 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.1",
     "react-hook-form": "^6.15.4",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sweetalert2": "^10.15.6",
