--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@hookform/resolvers": "^1.3.4",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@reduxjs/toolkit": "^1.5.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
@@ -24,6 +25,7 @@
     "react-dropzone": "^11.3.1",
     "react-hook-form": "^6.15.4",
     "react-redux": "^7.2.3",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sweetalert2": "^10.15.6",
