--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookform/resolvers": "^1.3.4",
+    "@hookform/devtools": "^3.1.0",
+    "@hookform/resolvers": "^2.7.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "dompurify": "^2.3.0",
     "libphonenumber-js": "^1.9.13",
     "node-sass": "^4.14.1",
     "notistack": "^1.0.9",
@@ -23,7 +25,7 @@
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.3.1",
-    "react-hook-form": "^6.15.4",
+    "react-hook-form": "^7.12.2",
     "react-redux": "^7.2.3",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
