--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-redux": "^7.2.3",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "sweetalert2": "^10.15.6",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9"
